I added 3 task, changed geometry (used BoxMesh), boundary and material parameters(made auxetic material) and added clamp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,15 @@
-cmake_minimum_required(VERSION 3.11)
+cmake_minimum_required(VERSION 3.5)
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -g")
+set(PROJECT_NAME demo)
+project(${PROJECT_NAME})
 
-project(vtkdemo)
-add_executable(ball3d ball3d.cpp)
+# Get DOLFIN configuration data (DOLFINConfig.cmake must be in DOLFIN_CMAKE_CONFIG_PATH)
+find_package(DOLFIN REQUIRED)
+include(${DOLFIN_USE_FILE})
 
-# Найдём VTK
-find_package(VTK REQUIRED)
-# ... и подключим её со всеми её компонентами её нативными средствами
-include(${VTK_USE_FILE})
 
-# gmsh укажем явно по кусочкам (потому что он был просто распакован руками)
-add_library(gmsh SHARED IMPORTED)
-set_target_properties(gmsh PROPERTIES
-    IMPORTED_LOCATION "/usr/lib/x86_64-linux-gnu/libgmsh.so"
-    INTERFACE_INCLUDE_DIRECTORIES "/usr/include"
-)
-set(GMSH_LIBRARY gmsh)
-# если бы gmsh был поставлен прилично, то можно было бы примерно вот так
-#find_package(gmsh REQUIRED)
-#include_directories(${GMSH_INCLUDE_DIR})
-#target_link_libraries(tetr3d ${GMSH_LIBRARY})
 
-# Укажем библиотеки для линковки
+add_executable(hyper_elasticity2 lab3.cpp)
+target_link_libraries(hyper_elasticity2 dolfin)
 
-target_link_libraries(ball3d ${VTK_LIBRARIES})
-target_link_libraries(ball3d ${GMSH_LIBRARY})
+
